@@ -1,6 +1,7 @@
 univention-virtual-machine-manager-daemon (7.0.0-17) unstable; urgency=low
 
   * Bug #47617: Add post-copy migration.
+  * Bug #47741: Fix file permissions of cache directory.
 
  -- Philipp Hahn <hahn@univention.de>  Wed, 28 Nov 2018 19:07:41 +0100
 
